# rust_diesel

./: Cargo.toml
migrations/2020-07-22-015502_create_posts/: up.sql
src/: lib.rs  main.rs
