[package]
name = "sample02-db"
version = "0.1.0"
authors = ["kazuyoshi80 <kkawakami@smartshopping.co.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version="1.4.5",features=["mysql"]}
dotenv = "0.15.0"